--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
+    "@types/redux-persist": "^4.3.1",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "node-sass": "^6.0.0",
