--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/react": "^17.0.0",
     "@types/react-bootstrap": "^0.32.25",
     "@types/react-dom": "^17.0.0",
+    "@types/react-linkify": "^1.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/redux-persist": "^4.3.1",
+    "@types/socket.io-client": "^3.0.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "node-sass": "^6.0.0",
@@ -28,6 +30,7 @@
     "react-tooltip": "^4.2.19",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.1.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
