--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toast-notifications": "^2.4.4",
     "react-tooltip": "^4.2.19",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
