--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toast-notifications": "^2.4.4",
+    "react-spring": "^9.2.1",
     "react-tooltip": "^4.2.19",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
